elastic_stack/elasticsearch/elasticsearch-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: wazuh-elasticsearch
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - es.bytelabs.ng
      secretName: wazuh-master-tls
  rules:
    - host: es.bytelabs.ng
      http:
        paths:
          - path: /
            backend:
              serviceName: wazuh-elasticsearch
              servicePort: 9200
